# zfsdu

./: .gitignore  README.md  Vagrantfile  provision.sh  pyproject.toml
src/zfsdu/: __init__.py  cli.py  errors.py  formatters.py  models.py  tree.py  zfs.py
src/zfsdu/ui/: __init__.py  app.py  zfsdu.tcss
tests/: test_cli.py  test_formatters.py  test_tree.py  test_ui_app.py  test_zfs.py
